Fix deployment path issue for Render - move server.ts to src/ and update package.json

--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "ireporter-backend",
   "version": "1.0.0",
   "description": "Backend for iReporter application",
-  "main": "dist/server.js",
+  "main": "src/dist/server.js",
   "scripts": {
-    "start": "node dist/server.js",
+    "start": "node src/dist/server.js",
     "dev": "ts-node-dev server.ts",
     "build": "tsc",
     "test": "jest"
