--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ireporter-backend",
   "version": "1.0.0",
   "description": "Backend for iReporter application",
-  "main": "src/dist/server.js",
+  "main": "dist/server.js",
   "scripts": {
-    "start": "node src/dist/server.js",
-    "dev": "ts-node-dev server.ts",
+    "start": "node dist/server.js",
+    "dev": "ts-node-dev src/server.ts",
     "build": "tsc",
     "test": "jest"
   },
@@ -18,7 +18,7 @@
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.0",
     "node-cron": "^3.0.3",
-    "nodemailer": "^6.10.1"
+    "nodemailer": "^7.0.12"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
