--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
-    "pg": "^8.11.0",
     "node-cron": "^3.0.3",
-    "nodemailer": "^7.0.12"
+    "nodemailer": "^7.0.12",
+    "pg": "^8.17.2"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
