--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/multer": "^2.0.0",
     "@types/node": "^20.8.0",
     "@types/nodemailer": "^6.4.14",
+    "@types/pg": "^8.16.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
